--- a/_posts/2025-06-13-OpenGL 라이팅.md
+++ b/_posts/2025-06-13-OpenGL 라이팅.md
@@ -196,7 +196,7 @@ void LightSpec()
 ### 실행 영상
 
 <video width="640" height="480" controls loop="" muted="true" autoplay="">
-       <source src="https://github.com/Kyonami/kyonami.github.io/videos/2025-06-13-OpenGL 라이팅/OpenGL 라이팅.mp4"/>
+       <source src="../videos/2025-06-13-OpenGL 라이팅/OpenGL 라이팅.mp4"/>
 </video>
 
 # 6. 전체 소스코드
