--- a/_posts/GameEngine/2025-06-13-OpenGL 라이팅.md
+++ b/_posts/GameEngine/2025-06-13-OpenGL 라이팅.md
@@ -202,8 +202,9 @@ void LightSpec()
 ### 실행 영상
 
 <video width=1280 height=720 controls loop="" muted="true" autoplay="">
-       <source src="../videos/2025-06-13-OpenGL 라이팅/OpenGL 라이팅.mp4"/>
+       <source src="../../videos/2025-06-13-OpenGL 라이팅/OpenGL 라이팅.mp4"/>
 </video>
+
 
 
 ​	
