--- a/_posts/UE/2025-05-17-언리얼 플러그인 만들기.md
+++ b/_posts/UE/2025-05-17-언리얼 플러그인 만들기.md
@@ -7,4 +7,4 @@
 아무런 C++ 프로젝트 생성 후
 Edit -> Plugins
 
-![image-20250525225014600](./../Images/2025-05-17-%EC%96%B8%EB%A6%AC%EC%96%BC%20%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8%20%EB%A7%8C%EB%93%A4%EA%B8%B0/image-20250525225014600.png)
+![image-20250525225014600](./../../Images/2025-05-17-%EC%96%B8%EB%A6%AC%EC%96%BC%20%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8%20%EB%A7%8C%EB%93%A4%EA%B8%B0/image-20250525225014600.png)
