--- a/_posts/UE/2025-12-05-언리얼 스켈레탈 메시 애니메이션 시스템.md
+++ b/_posts/UE/2025-12-05-언리얼 스켈레탈 메시 애니메이션 시스템.md
@@ -9,13 +9,15 @@
 
 스켈레탈 메시 애니메이션 시스템은 스켈레탈 메시, 애니메이션 에셋으로 작업할 때 사용 가능한 에디터로 구성되어 있다. 이를 통해 애니메이션, 레벨 내의 인터랙션, 기타 프록시져럴 행동을 생성할 수 있다.
 
-![image-20251205032715438](./../images/image-20251205032715438.png)
+<img src="../../images/image-20251205032715438.png" alt="image-20251205032715438" style="zoom:50%;" />
+
 기본적으로 스켈레탈 메시는 콘텐츠 브라우저에서 열어서 확인할 수 있다.
 
 플머들은 저 스켈레탈에 크게 손 댈일은 없지만, 눌러보면 각각의 관절을 선택할 수 있다.
 상단의 툴바에서 애니메이션 추가, 포즈 추가, 블렌딩 등이 가능하다.
 
-![image-20251205032909536](./../images/image-20251205032909536.png)
+![image-20251205032909536](../../images/image-20251205032909536.png)
+
 우측 상단의 에디터 모드에서 3, 4번 버튼이 주로 우리가 쓰게 될 기능들이 들어있는 것이다.
 
 # 애니메이션 블루프린트
@@ -24,7 +26,8 @@
 리얼타임에서 스켈레탈 메시의 애니메이션을 제어하는 특수 목적이 있는 블루프린트이다. 그래프를 편집하여 애니메이션 블렌딩, 스켈레톤 본 제어, 각 프레임에서 사용할 애니메이션 포즈등을 결정할 로직을 세울 수 있다.
 이는 반드시 스켈레탈 메시가 필요하다.
 
-![image-20251205033307386](./../images/image-20251205033307386.png)
+![image-20251205033307386](../../images/image-20251205033307386.png)
+
 아까 봤던 스켈레탈 메시에다가 우클릭 하면 저런식으로 생성해줄 수 있다.
 저기에 로직을 짜고, 캐릭터에 할당시키면 동작하는 것이다.
 
@@ -35,7 +38,8 @@
 
 ### 1. 애님 그래프
 
-![image-20251205033807472](./../images/image-20251205033807472.png)
+![image-20251205033807472](../../images/image-20251205033807472.png)
+
  캐릭터에 대한 **애니메이션 별** 로직을 생성한다. 블루프린트와 똑같은 방법으로 활용한다.
  보통 블렌딩, 본 트랜스폼, 로코모션 등의 애니메이션 이펙트를 제어하는 경우 활용한다. 애님 그래프 내에서 함수나 계산된 값을 사용해 입력으로 활용하는 식으로 사용하여 최종 포즈를 정의 시킨다.
 
