--- a/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
+++ b/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
@@ -45,7 +45,7 @@
 ### 1.2.1 간단한 생성 모델
 
 2차원 생성 모델링 게임 예시)
-포인트 집합 $$X$$ → 규칙 `P_data` 같은 규칙으로 보이는 다른 포인트 $$x=(x1, x2)$$를 고르는 것이 목표.
+포인트 집합 `X` → 규칙 `P_data` 같은 규칙으로 보이는 다른 포인트 `x=(x1, x2)`를 고르는 것이 목표.
 
 <img src="../../images/image-20251218151526055.png" style="zoom:50%;" />
 
@@ -64,7 +64,7 @@
 
 #### 샘플 모델링 프레임워크
 
-- 샘플 데이터셋 $$X$$를 가지고 있다.
+- 샘플 데이터셋 `X`를 가지고 있다.
 - 샘플이 알려지지 않은 어떤 `P_data`분포로 생성 된 것으로 가정.
 - `P_data`를 흉내내는 생성모델 `P_model`을 만들려고 한다. `P_model`에서 샘플링하여 `P_data`에서 뽑은 것 같은 샘플을 생성할 수 있다.
 - 그러므로 `P_model`은 다음의 특징을 가져야 한다.
@@ -101,7 +101,7 @@
 이 2차원 공간이 잠재 공간(latent space)이다.
 
 하지만 이걸 기계가 깨닫는건 어렵다.
-저 높이와 너비를 이해하기 위해서 한 점을 비스킷 깡통 이미지에 매핑하는 매핑 함수 $$f$$를 학습해야함.
+저 높이와 너비를 이해하기 위해서 한 점을 비스킷 깡통 이미지에 매핑하는 매핑 함수 `f`를 학습해야함.
 머신러닝 (특히 딥러닝)을 사용하면 사람의 개입 없이 관계를 이해하도록 훈련 시킬 수 있다.
 
 <img src="../../images/image-20251218164420221.png" alt="image-20251218164420221" style="zoom:50%;" />
@@ -117,3 +117,53 @@
 그래서 이 복잡한 매니폴드를 더 단순한 잠재 공간으로 펼쳐야 한다. 이미지 공간을 잠재공간으로 인코딩, 잠재 공간에서 이미지 공간으로 디코딩 하는 것이다.
 훈련 데이터셋 → 인코딩 → 샘플링 → 디코딩하는 과정은 많은 생성 모델링 기법에서 사용된다.
 쉽게 말해 복잡한 고차원 공간을 단순한 공간으로 바꾼다는 이야기이다.
+
+## 1.3 핵심 확률 이론
+
+생성 모델링은 확률 분포의 통계적 모델링과 밀접하다.
+다섯 가지 핵심 용어 정리
+
+- 표본 공간: 샘플 `x`가 가질 수 있는 모든 값의 집합
+- 확률 밀도 함수(밀도 함수): 점 x를 0과 1사이 숫자로 매핑하는 함수 `p(x)`이다.
+    - 샘플 데이터셋을 생성한 실제 밀도 함수 `p_data(x)`는 하나여도, 추정하는데 사용할 수 있는 `p_model(x)`는 무수히 많음
+- 모수 모델링: 안정적인 `p_model(x)`를 찾는데 사용할 수 있는 기법이다.
+    - 유한한 개수의 파라미터 `θ`를 사용해 기술할 수 있는 밀도함수 `p_θ(x)`의 한 종류이다.
+    - 데이터셋 `X`가 관측될 가능도를 최대화하는 파라미터 `θ`의 최적값을 찾는것이 목적
+- 가능도: 파라미터 집합 `θ`의 가능도는 샘플 점 `x`가 주어졌을 때 `θ`의 타당성. → 점 `x`에서 <img src="../../images/image-20251218200429979.png" alt="image-20251218200429979" style="zoom:33%;" />을 파라미터로 가진 밀도함수의 값
+    - 다음과 같이 정의됨: <img src="../../images/image-20251218195619493.png" alt="image-20251218195619493" style="zoom:25%;" />
+    - 독립된 샘플로 구성된 전체 데이터셋 `X`가 있으면: <img src="../../images/image-20251218195604637.png" alt="image-20251218195604637" style="zoom: 25%;" />
+    - 0과 1사이 숫자를 곱하는건 계산 비용이 많이 들기 때문에 로그 가능도 `l`을 사용하는 경우가 많음:<img src="../../images/image-20251218195731711.png" alt="image-20251218195731711" style="zoom:25%;" />
+        - 실제 데이터 생성분포가 `θ`을 파라미터로 가진 모델이면 파라미터 집합 θ의 가능도를 데이터 발견 확률로 정의
+- 최대 가능도 추정: <img src="../../images/image-20251218200452508.png" alt="image-20251218200452508" style="zoom:33%;" />를 추정할 수 있는 기법
+    - <img src="../../images/image-20251218200512932.png" alt="image-20251218200512932" style="zoom:50%;" />: 관측 된 데이터를 가장 잘 설명하는 밀도함수 `p_θ(x)`의 파라미터 집합 θ.
+    - <img src="../../images/image-20251218200722389.png" alt="image-20251218200722389" style="zoom:33%;" />, <img src="../../images/image-20251218200557385.png" alt="image-20251218200557385" style="zoom:33%;" />를 최대 가능도 추정이라고도 부름
+    - 신경망은 일반적으로 손실 함수를 최소화한다. 따라서 음의 로그 가능도를 최소화하는 파라미터 집합을 찾는 것과 같다.
+        - <img src="../../images/image-20251218200737736.png" alt="image-20251218200737736" style="zoom:33%;" /> 
+    - 생성 모델링을 최대 가능도 추정의 형태로 생각할 수 있음.
+    - θ는 모델에 담긴 신경망의 가중치. 주어진 데이터를 관측할 가능도를 최대화(음의 로그 가능도는 최소화)하는 파라미터를 찾는다.
+- 일반적으로 고차원 문제에서 `p_θ(x)`를 직접 계산하기는 매우 어렵다.
+
+## 1.4 생성 모델 분류
+
+모든 생성모델은 밀도 함수 `p_θ(x)`르를 모델링 하는 방식이 조금씩 다르다. 크게 세 가지가 있다.
+
+1. 명시적으로 밀도 함수를 모델링. 다루기 쉽게 제약을 둠.
+2. 다루기 쉬운 밀도함수의 근사치를 명시적으로 모델링
+3. 데이터를 직접 생성하는 확률적 과정을 통해 밀도 함수를 암묵적으로 모델링
+
+<img src="../../images/image-20251218201423992.png" alt="image-20251218201423992" style="zoom:50%;" />
+
+- 암묵적 밀도 모델(implicit density model)은 확률 밀도 추정이 목적은 아님. 데이터를 직접 생성하는 확률적 과정을 만드는데 집중.
+    - 생성적 적대 신경망(generative adversarial network)이 가장 잘 알려짐.
+- 명시적 밀도 모델(explicit density model)
+    - 다루기 쉬운 모델(tractable model): 모델 구조에 제약이 생겨 밀도함수 계산이 쉬운 케이스
+        - 자기 회귀 모델(autoregressive model): 입력 특성에 순서를 부과하여 출력이 순차적(단어, 픽셀 단위)으로 생성됨.
+        - 노멀라이징 플로우 모델(normalizing flow model): 복잡한 분포 생성시 단순한 분포에 다루기 쉽고 역전 가능한 함수를 연속적으로 적용
+    - 밀근사 밀도 모델(approximate density model)
+        - 변이형 자동인코더(variational autoencoder): 잠재 변수를 도입하고, 결합 밀도 함수의 근사치를 최적화.
+        - 에너지 기반 몯레(energy-based model): 변분 방법이 아닌 마르코프 연쇄 샘플링을 활용
+        - 확산 모델 (diffusion model)은 오염된 이미지에서 점진적으로 잡음을 제거하도록 모델 훈련
+
+모두 **딥러닝**이다. 거의 모든 정교한 생성 모델의 핵심은 심층 신경망이다.
+
+## 1.5 생성 딥러닝 예제 코드 
