--- a/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
+++ b/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
@@ -4,7 +4,8 @@
 
 주어진 데이터셋과 유사한 새로운 데이터를 생성할 수 있게 모델을 훈련하는 것
 
-말사진 예시)
+<img src="../../images/image-20251219102150068.png" alt="image-20251219102150068" style="zoom:50%;" />
+
 **훈련 데이터**를 통해 생성 모델을 **훈련** → 말 사진의 픽셀간의 복잡한 관계를 정의하는 규칙을 포착 → 이 모델에서 **샘플링**을 통해 데이터 셋에 없는 새로운 말 이미지 생성
 
 **샘플** : 훈련 데이터에서 하나의 데이터 포인트, 많은 특성으로 이루어져있다.
@@ -17,7 +18,10 @@
 
 ### 1.1.1 생성 모델링과 판별 모델링
 
-- 판별 모델링: 생성 모델링의 반대개념
+판별 모델링: 생성 모델링의 반대개념
+
+<img src="../../images/image-20251219102218934.png" alt="image-20251219102218934" style="zoom:50%;" />
+
 - 반 고흐의 그림 + 다른 화가들의 그림이 있는 데이터셋을 통해 반고흐의 그림인지 예측하는 판별모델을 훈련할 수 있음.
     - 특정 색깔, 형태, 질감을 학습하여 예측 지수를 높임
 - **레이블**: 판별 모델링 수행시 필요. 반고흐 예제같은 이진 분류 문제에서 반 고흐 그림의 레이블은 1, 아닌 그림의 레이블은 0.
@@ -30,7 +34,9 @@
 
 ### 1.1.2 생성 모델의 등장
 
-- 생성 모델을 만드는 건 어렵고, 근접할 수 없는 영역이었지만 머신러닝 기술의 발전이 이를 가능하게 만들었다.
+<img src="../../images/image-20251219102305356.png" alt="image-20251219102305356" style="zoom:50%;" />
+
+생성 모델을 만드는 건 어렵고, 근접할 수 없는 영역이었지만 머신러닝 기술의 발전이 이를 가능하게 만들었다.
 
 ### 1.1.3 생성 모델링과 AI
 
