오타 등 자잘한 부분 수정

--- a/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
@@ -13,7 +13,7 @@
 
 <img src="../../images/image-20251221143448173.png" alt="image-20251221143448173" style="zoom:50%;" />
 
-픽셀, 징동수, 문자 하나하나엔 거의 정보가 없다. 234번째 픽셀의 색을 보고 무슨 이미지인지 알 수 없고, 24번째 문자가 e라는 사실로 축구에 관한 내용인지 정치에 관한 내용인지 알 수 없다.
+픽셀, 진동수, 문자 하나하나엔 거의 정보가 없다. 234번째 픽셀의 색을 보고 무슨 이미지인지 알 수 없고, 24번째 문자가 e라는 사실로 축구에 관한 내용인지 정치에 관한 내용인지 알 수 없다.
 그러므로 이런 원시 픽셀에서 로지스틱 회귀, 랜덤 포레스트, XGBoost 알고리즘을 훈련하면 단순 분류작업 뺴곤 성능이 낮은 모델만 나온다.
 
 딥러닝은 정형 데이터에도 적용이 되지만 비정형 데이터에서 빛을 발한다. 특히 생성 모델링에선 더욱 더 그렇다.
@@ -30,7 +30,7 @@
 <img src="../../images/image-20251221150532883.png" alt="image-20251221150532883" style="zoom:50%;" />
 
 다중 퍼셉트론의 예시, 입력이 출력 레이어 까지 도달할 때 까지 순서대로 변환됨. → 정방향 계산(Forward pass)
-각 유닛이 입력의 가중치 합에 비선형 변환 적용하여 다음층에 전달. 정점이 바로 최종 출력 레이어. 하나의 유닛으로 원래 입력이 카테고리에 속활 확률을 출력함.
+각 유닛이 입력의 가중치 합에 비선형 변환 적용하여 다음 층에 전달. 정점이 바로 최종 출력 레이어. 하나의 유닛으로 원래 입력이 카테고리에 속활 확률을 출력함.
 
 정확한 예측에 필요한 각 레이어의 가중치 조합을 찾는것이 목표. → 네트워크를 훈련 한다고 함.
 
@@ -72,7 +72,7 @@
         - 예를 들어 임의의 미분 가능한 표현식의 그레이디언트를 계산하고, 텐서 연산을 효율적으로 실행할 수 있다.
 - 케라스
     - 텐서플로우 위에 구축된 고 수준의 API이다. 다양한 신경망 구성요소를 제공하고, 함수형 API로 복잡한 딥러닝 구조를 만들 수 있다.
-    - 유연성이 높고 쉽기 떄문에 딥러닝 입문에 사용하기 좋다.
+    - 유연성이 높고 쉽기 때문에 딥러닝 입문에 사용하기 좋다.
 
 ## 2.3 다층 퍼셉트론
 
