--- a/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
+++ b/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
@@ -41,7 +41,7 @@
 ### 1.1.3 생성 모델링과 AI
 
 - 생성 모델을 복잡한 인공지능 문제를 푸는 열쇠로 생각되는 세 가지 이유
-    1. 아론적 이유: 단순히 레이블 수준을 넘어서 데이터의 분포를 완전히 이해해야 하기 때문에.
+    1. 이론적 이유: 단순히 레이블 수준을 넘어서 데이터의 분포를 완전히 이해해야 하기 때문에.
     2. 실용적 이유: 전통적 강화학습의 떨어지는 유연성을 생성 모델을 통해 작업과 독립적으로 환경의 월드 모델을 학습 시키는 방식으로 해결이 가능하기 때문에.
     3. 근본적 이유: 인간의 지능은 생성적이기 때문이다. 보이지 않는 것을 상상하고 미래를 떠올리는 것은 생성적이다.
         - 뇌의 작동원리와 인공 일반지능을 이해하는데 핵심적인 도구가 될 것이다.
@@ -76,7 +76,7 @@
 - 그러므로 `P_model`은 다음의 특징을 가져야 한다.
     - 정확도: 생성된 샘플의 `P_model`이 높으면 `P_data`에서 뽑은 것 처럼 보여야 한다. 반대의 경우도 성립해야 한다.
     - 생성: `P_model`에서 새로운 샘플을 쉽게 샘플링 할 수 있어야 한다.
-    - 표햔: 데이터의 다양한 고수준의 특성이 `P_model`로 어떻게 표현되는지 이해가 가능해야 한다.
+    - 표현: 데이터의 다양한 고수준의 특성이 `P_model`로 어떻게 표현되는지 이해가 가능해야 한다.
 
 ---
 
@@ -146,12 +146,12 @@
     - 신경망은 일반적으로 손실 함수를 최소화한다. 따라서 음의 로그 가능도를 최소화하는 파라미터 집합을 찾는 것과 같다.
         - <img src="../../images/image-20251218200737736.png" alt="image-20251218200737736" style="zoom:33%;" /> 
     - 생성 모델링을 최대 가능도 추정의 형태로 생각할 수 있음.
-    - θ는 모델에 담긴 신경망의 가중치. 주어진 데이터를 관측할 가능도를 최대화(음의 로그 가능도는 최소화)하는 파라미터를 찾는다.
+    - 모델에 담긴 신경망의 가중치. 주어진 데이터를 관측할 가능도를 최대화(음의 로그 가능도는 최소화)하는 파라미터 θ를 찾는다.
 - 일반적으로 고차원 문제에서 `p_θ(x)`를 직접 계산하기는 매우 어렵다.
 
 ## 1.4 생성 모델 분류
 
-모든 생성모델은 밀도 함수 `p_θ(x)`르를 모델링 하는 방식이 조금씩 다르다. 크게 세 가지가 있다.
+모든 생성모델은 밀도 함수 `p_θ(x)`를 모델링 하는 방식이 조금씩 다르다. 크게 세 가지가 있다.
 
 1. 명시적으로 밀도 함수를 모델링. 다루기 쉽게 제약을 둠.
 2. 다루기 쉬운 밀도함수의 근사치를 명시적으로 모델링
@@ -167,7 +167,7 @@
         - 노멀라이징 플로우 모델(normalizing flow model): 복잡한 분포 생성시 단순한 분포에 다루기 쉽고 역전 가능한 함수를 연속적으로 적용
     - 근사 밀도 모델(approximate density model)
         - 변이형 자동인코더(variational autoencoder): 잠재 변수를 도입하고, 결합 밀도 함수의 근사치를 최적화.
-        - 에너지 기반 몯레(energy-based model): 변분 방법이 아닌 마르코프 연쇄 샘플링을 활용
+        - 에너지 기반 모델(energy-based model): 변분 방법이 아닌 마르코프 연쇄 샘플링을 활용
         - 확산 모델 (diffusion model)은 오염된 이미지에서 점진적으로 잡음을 제거하도록 모델 훈련
 
 모두 **딥러닝**이다. 거의 모든 정교한 생성 모델의 핵심은 심층 신경망이다.
