--- a/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
@@ -2,7 +2,7 @@
 
 데이터 처리 유닛의 층을 여러 개 쌓아 구조화가 안된 데이터에서 높은 수준의 표현을 학습한다.
 
-## 2.1 딥러닝용 데이터
+# 2.1 딥러닝용 데이터
 
 대부분의 알고리즘은 테이블 형태로 된 정형(구조화 된) 데이터를 입력으로 사용한다.
 이런 형태의 테이블 데이터를 사용해 로지스틱 회귀(랜덤 포레스트), XGBoost 모델을 훈련하여 이진 응답 변수 예측이 가능하다.
@@ -18,11 +18,11 @@
 
 딥러닝은 정형 데이터에도 적용이 되지만 비정형 데이터에서 빛을 발한다. 특히 생성 모델링에선 더욱 더 그렇다.
 
-## 2.2 심층 신경망
+# 2.2 심층 신경망
 
 여러 은닉 층(hidden layer)을 쌓은 인공 신경망(artificial neural network)이다. 그러므로 딥러닝 = 심층 신경망이라고 봐도 무방하다.
 
-### 2.2.1 신경망이란?
+## 2.2.1 신경망이란?
 
 심층 신경망은 층을 연속해서 쌓음, 층은 유닛으로 이루어짐, 유닛은 가중치로 연결됨. 여러 종류의 층이 있다.
 널리 사용되는 건 Fully Connected Layer(완전 연결 층 또는 밀집 층), 인접한 모든 층이 연결되면 다층 퍼셉트론(MLP)이라고 함.
@@ -39,7 +39,7 @@
 
 예측 오류는 이 네트워크를 거꾸로 전파해서 예측을 제일 많이 향상시키는 방향으로 가중치를 고쳐나간다. (예시 사진에서 간선을 고친다고 생각하면 편함) 이를 **역전파 (Backpropagation)**라고 한다. 이를 통해 점점 나은 예측을 하게 된다.
 
-### 2.2.2 고수준 특성 학습
+## 2.2.2 고수준 특성 학습
 
 신경망의 가장 강력한 속성은 사람이 개입하지 않아도 알아서 입력 데이터에서 특성을 학습하는 능력이다.
 우리가 굳이 눈 모양과, 입가의 밝기등을 계산해주지 않아도 되기 때문에 매우 유용하다.
@@ -64,7 +64,7 @@
 
 > 이미지 인식용으로 설계된 ResNet은 152개의 층으로 이루어져 있다.
 
-### 2.2.3 텐서플로우와 케라스
+## 2.2.3 텐서플로우와 케라스
 
 - 구글의 텐서플로우
     - 오픈소스 파이썬 머신러닝 라이브러리이며, 머신러닝 솔루션을 만들 때 널리 사용된다.
@@ -74,12 +74,12 @@
     - 텐서플로우 위에 구축된 고 수준의 API이다. 다양한 신경망 구성요소를 제공하고, 함수형 API로 복잡한 딥러닝 구조를 만들 수 있다.
     - 유연성이 높고 쉽기 때문에 딥러닝 입문에 사용하기 좋다.
 
-## 2.3 다층 퍼셉트론
+# 2.3 다층 퍼셉트론
 
 지도 학습(Supervised Learning)을 통해 이미지를 분류하는 MLP를 케라스를 통해 쉽게 만들어보자.
 판별모델이긴 하지만, 여러 유형의 생성 모델에서 지도 학습이 중요한 역할을 하기 때문에 좋은 주제이다.
 
-### 2.3.1 데이터 준비하기
+## 2.3.1 데이터 준비하기
 
 케라스에서 제공된 6만개의 32x32픽셀 컬러이미지 데이터인 CIFAR-10 데이터셋을 활용. 총 10개의 클래스 중 하나로 분류된다.
 
@@ -89,15 +89,18 @@
 신경망은 각 입력의 절댓값이 1보다 작으면 제일 잘 작동하므로 `/ 255f`를 해줌.
 신경망 출력: 이미지가 클래스에 속할 확률 → 이미지 정수 레이블을 one-hot-encoding 된 벡터로 바꿔야 함.
 
-> one-hot encoding을 쉽게 표현한 예시: <img src="../../images/image-20251221162450478.png" alt="image-20251221162450478" style="zoom:33%;" /> 
+> one-hot encoding을 쉽게 표현한 예시
+>
+> <img src="../../images/image-20251221162450478.png" alt="image-20251221162450478" style="zoom:33%;" /> 
 
 ```python
 import numpy as np
 from tensorflow.keras import datasets, utils
 
 # 1. CIFAR-10 데이터셋 로드
-# x_train: [50000, 32, 32, 3], x_test: [10000, 32, 32, 3]
-# y_train: [50000, 10], y_test: [10000, 10]
+# x_train: [50000, 32, 32, 3], x_test: [10000, 32, 32, 3] (이미지 5만장, 32x32 짜리, 색상 채널 3개)
+# y_train: [50000, 10], y_test: [10000, 10]	()
+
 (x_train, y_train), (x_test, y_test) = datasets.cifar10.load_data()
 
 NUM_CLASSES = 10
@@ -110,4 +113,121 @@ x_test = x_test.astype('float32') / 255.0
 y_train = utils.to_categorical(y_train, NUM_CLASSES)
 y_test = utils.to_categorical(y_test, NUM_CLASSES)
 ```
+
+## 2.3.2. 모델 만들기
+
+케라스에서 Sequential 모델, 함수형 API를 사용한 신경망 구조 정의 가능.
+
+- Sequential 모델: 일렬로 층을 쌓은 네트워크를 빠르게 만들 때 사용하기 좋음 
+    - 분기 없이 이전 층이 그대로 다음 층으로 연결
+- 함수형 API: 더 복잡한 구조에서 활용.
+    - 한 층의 출력이 여러 층으로 가거나, 여러 입력을 받는 모델도 가능
+
+```python
+from tensorflow.keras import layers models
+
+model = models.Sequential([
+    layers.Flatten(input_shape=(32, 32, 3)),
+    layers.Dense(200, activation = 'relu'),
+    layers.Dense(150, activation = 'relu'),
+    layers.Dense(10, activation = 'softmax'),
+])
+```
+
+책에 나오는 대부분의 모델은 한 층의 출력이 여러개의 후속층으로 전달됨. 또는 반대로 한 층이 여러 이전층으로 전달받음.
+ -> Sequential 클래스는 적합하지 않음. 훨씬 유연한 함수형 API를 사용해야 함.
+
+```python
+input_layer = layers.Input((32, 32, 3))
+
+x = layers.Flatten()(input_layer)
+x = layers.Dense(200, activation="relu")(x)
+x = layers.Dense(150, activation="relu")(x)
+
+output_layer = layers.Dense(NUM_CLASSES, activation="softmax")(x)
+
+model = models.Model(input_layer, output_layer)
+
+model.summary()
+```
+
+함수형 API를 사용하여 만든 모델.
+
+위 두 가지 코드는 같은 모델을 만듦. 아래는 구조를 그림으로 나타낸 모습.
+
+<img src="./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251223202906350.png" alt="image-20251223202906350" />
+
+### 레이어
+
+여기서 사용하는 층은 세 가지이다.
+
+- Input: 입구 레이어, 앞으로 들어올 데이터의 모양을 네트워크에 알려줌.
+- Flatten: 펴는 레이어, 입체적인 구조의 이미지를 한 줄로 펴서 MLP가 알아먹을 수 있게 만듦
+    - 32 x 32에 색상 채널 3가지를 3072개의 숫자로 쭉 펼친다. 색 위치 말고 모양만 바꿔 줌
+- Dense: 핵심 레이어, 입력 숫자들을 받음 -> 가중치 적용 -> 전부 더하고 -> 활성화 함수에 통과
+    - 활성화 함수는 반드시 필요함. 비선형성을 넣어줘서 신경망이 특성을 배울 수 있게 해줌.
+
+### 활성화 함수
+
+이 뉴런의 계산 결과를 그냥 넘길지, 조정해서 넘길지 조정하는 규칙이다.
+신경망에 곡선을 넣어서 복잡한 패턴을 배울 수 있게 만들어준다.
+
+![image-20251223204629393](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251223204629393.png)
+
+- ReLU: 제일 기본, 가장 많이 쓰는 함수
+    - 입력이 0보다 작으면 0 더 크면 그대로 통과
+    - 빠르고, 학습이 잘되고, 깊은 신경망에서도 안정적
+- Leaky ReLU: ReLU의 보완 버전
+    - 계속 음수만 출력하면 출력이 0이 되고 학습이 멈춤 -> 뉴런이 죽음
+    - 음수여도 아주 작은 값은 통과 시킴
+- Sigmoid: 층의 출력을 0에서 1 사이로 조정함
+    - 이진 분류, 여러 개 중 동시에 참일 수 있는 문제에서 유용
+    - 신경망이 깊으면 gradient가 작아져서 학습이 느려짐
+    - 요즘은 중간 레이어에서 잘 안쓰고 출력 레이어에서만 사용함.
+- Softmax: 확률 분배기, 모든 출력값의 합을 반드시 1로 만듦.
+    - 샘플이 정확히 하나의 클래스에만 속해야 하는 다중 분류 문제임.
+    - $$y_i = \frac{e^{x_i}}{\sum^J_{j=1} e^{x_j}}$$, J는 층에 있는 전체 유닛의 개수
+
+Keras에서 직접 Dense 안에 바로 쓰거나, Activation 레이어로 따로 쓰는 식으로 활성화 함수를 정의할 수 있다.
+
+```python
+x = layers.Dense(units=200, activation = 'relu')(x)
+x = layers.Dense(units=200)(x)
+x = layers.Activation('relu')(x)
+```
+
+모델 조사하기
+
+`mode.summary()` 메서드를 사용해 각 층의 크기를 조사할 수 있다.
+Dense의 레이어 파라미터 수를 계산하는 방법은 $$(입력 개수 + 1) x 유닛 수$$ 이다.
+여기서 +1은 bias 때문이다.
+
+| 층 (타입)  | 출력 크기         | 파라미터 개수 | 파라미터 수 계산법         |
+| ---------- | ----------------- | ------------- | -------------------------- |
+| InputLayer | (None, 32, 32, 3) | 0             |                            |
+| Flatten    | (None, 3072)      | 0             |                            |
+| Dense      | (None, 200)       | 614,600       | (3072 + 1) × 200 = 614,600 |
+| Dense      | (None, 150)       | 30,150        | (200 + 1) × 150 = 30,150   |
+| Dense      | (None, 10)        | 1,510         | (150 + 1) × 10 = 1,510     |
+
+---
+
+| 총 파라미터 개수            | 646,260 |
+| --------------------------- | ------- |
+| 훈련되는 파라미터 개수      | 646,260 |
+| 훈련되지 않는 파라미터 개수 | 0       |
+
+학습해야 할 숫자가 64만개, 전부 학습 대상이며, 고정된 파라미터가 없다.
+
+---
+
+파라미터는 가중치(weight)와 편향(bias)의 총합이다
+Dense 레이어 파라미터 수 계산 방법: (입력 개수 + 1) +1은 bias
+
+### 결론
+
+Flatten은 모양을 바꾸고, Dense로 가중치를 학습한다.
+파라미터의 수는 모델의 무게와 난이도를 결정한다.
+
+## 2.3.3 모델 컴파일
 
