--- a/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
@@ -231,3 +231,297 @@ Flatten은 모양을 바꾸고, Dense로 가중치를 학습한다.
 
 ## 2.3.3 모델 컴파일
 
+예제 2-7처럼 손실 함수와 옵티마이저로 모델을 컴파일 한다.
+
+```python
+from tensorflow.keras import optimizers
+
+opt = optimizers.Adam(learning_rate=0.0005)
+model.compile(loss='categorical_crossentropy', optimizer=opt,
+ metrics=['accuracy'])
+```
+
+### 손실 함수
+
+신경망이 예측 출력과 정답을 비교하는 데 사용.
+샘플마다 정답에서 얼마나 떨어져 있는지 하나의 수치를 반환함. 적을수록 좋고 클수록 나쁨.
+
+케라스에서 많은 손실 함수들을 기본으로 제공함. 또한 직접 정의도 가능.
+
+많이 사용되는 세 가지 손실함수
+
+- 평균 제곱 오차: $$\text{MSE} = \frac{1}{n} \sum_{i=1}^{n} (y_i - p_i)^2$$
+    - 정답 $$y$$와 예측값 $$p_i$$사이의 차이를 제곱하고 평균을 낸 것이다. 즉 얼마나 빗나갔는가를 재는 척도이다.
+    - 주로 회귀 문제에 활용된다. 즉 연속적 값을 예측한다.
+    - 온도 예측, 가격 예측 등의 예시에서 활용
+- 범주형 크로스 엔트로피: $$- \sum_{i=1}^{n} y_{i} \log(p_{i})$$
+    - 샘플이 여러 클래스 중 하나에 속해야 하는 분류 문제에서 사용.
+    - 현재 예시에서 활용
+- 이진 크로스 엔트로피: $-\frac{1}{n}\sum_{i=1}^n \left( y_i \log(p_i) + (1 - y_i) \log(1 - p_i) \right)$
+    - 출력 유닛이 하나인 이진 분류 문제거나, 샘플이 여러 클래스에 속할 수 있는 다중 레이블 분류 문제에서 활용.
+    - 사진에 사람이 있는지 판별, 여러 태그가 동시에 붙어야 할 경우
+
+### 옵티마이저
+
+Loss가 문제점 지적을 하면, Optimizer로 수정을 한다.
+
+- Adam Optimizer (Adaptive Moment Estimation)
+- RMSProp (Root mean Squared Propagation)
+
+두가지 다 크게 매개변수를 건드릴 필요는 없다.
+다만 학습률은 건드려야 하는데. 쉽게 말해 한번에 얼마나 크게 고쳐볼지를 조절해야 하는 것이다.
+학습률이 크면 훈련 스텝마다 가중치 변화가 커서 훈련 속도가 빠르다. 하지만 불안정하고 최적점을 지나칠수도 있다.
+그래서 적절하게 맞춰주어야 한다.
+
+모델의 Compile()에 손실 함수와 옵티마이저를 전달하여 진행한다.
+metrics 매개변수에 정확도와 같은 지표를 추가로 지정해줄 수 있다.
+
+## 2.3.4 모델 훈련
+
+모델을 만들었으니 훈련을 시켜보자.
+
+```python
+model.fit(	# fit() -> 데이터에 모델을 맞춰라
+    x_train,	# 원본 이미지 데이터
+    y_train,	# 원 핫-인코딩 된 클래스 레이블 
+    batch_size=32,	# 훈련 스텝당 네트워크에 넘길 샘플 수 (한 번에 몇 장씩 공부할지)
+    epochs=10,	# 네트워크가 전체 훈련 데이터에 대해 반복 훈련 할 횟수 (전체를 10번 반복)
+    shuffle=True	# 훈련 스텝마다 배치를 훈련 데이터에서 중복허용 없이 랜덤하게 추출할지 여부
+)
+```
+
+CIFAR-10 데이터 셋의 이미지 범주를 예측하기 위한 심층 신경망 훈련 과정이다.
+
+1. 네트워크 가중치를 랜덤한 값으로 초기화
+2. Batch 하나(32장)을 모델에 넣음
+3. 예측 결과 만듦
+4. 정답과 비교해서 Loss 계산
+5. Loss를 줄이기 위해 역전파 및 가중치 업데이트
+6. 다음 Batch로 이동
+
+모든 샘플이 사용될 때 까지 계속 되며, 이것이 완료되면 첫 번째 에폭(Epoch)이 된다.
+이제 두 번째 에폭을 위해 다시 배치로 쪼개어 네트워크에 전달하며, 10번 반복한다.
+
+배치를 크게 잡으면 안정적이지만 느리고, 작게 잡으면 빠르지만 노이즈가 많다.
+
+### 2.3.5 모델 평가
+
+<img src="../../images/image-20251224150429205.png" alt="image-20251224150429205" style="zoom:50%;" />
+
+직접 만들어서 돌려보니 10번째 에폭에서 52.01%의 정확도를 보인다.
+하지만 중요한 건 처음 보는 문제에서도 비슷하게 맞출 수 있느냐이다.
+한번 테스트 해보자.
+
+```python
+model.evaluate(x_test, y_test)
+```
+
+<img src="../../images/image-20251224150725154.png" alt="image-20251224150725154" style="zoom:50%;" />
+
+약 49.45%의 정확도를 보인다. → 훈련 정확도 52.01%와 큰 차이가 나지 않는다.
+	→ 외운게 아닌 어느정도 일반화를 하고 있다는 의미
+
+CIFAR-10은 클래스가 10개 이므로, 랜덤 예측을 하면 확률이 10%인걸 감안하면 꽤 잘하고 있다고 볼 수 있다.
+
+그럼 이제 predict()를 통해 테스트 세트에 대한 예측 결과를 보자.
+
+```python
+CLASSES = np.array(['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck'])
+
+preds = model.predict(x_test)	# [10000, 10] 샘플마당 10개의 클래스 확률
+preds_single = CLASSES[np.argmax(preds, axis = -1)]
+# argmax는 확률이 가장 큰 클래스의 인덱스를 뽑는 함수. 하나의 예측 결과로 바꿈.
+# axis = -1 -> 마지막 차원에 배열을 압축해라.
+# preds_single은 [10000, 1]이다.
+actual_single = CLASSES[np.argmax(y_test, axis = -1)]
+```
+
+이미지, 예측값, 실제 레이블을 나란히 출력한다.
+
+```python
+import matplotlib.pyplot as plt
+
+n_to_show = 10
+indices = np.random.choice(range(len(x_test)), n_to_show)
+
+fig = plt.figure(figsize=(15, 3))
+fig.subplots_adjust(hspace=0.4, wspace=0.4)
+
+for i, idx in enumerate(indices):
+	img = x_test[idx]
+	ax = fig.add_subplot(1, n_to_show, i+1)
+	ax.axis('off')
+	ax.text(0.5, -0.35, 'pred = ' + str(preds_single[idx]), fontsize=10, ha='center', transform=ax.transAxes)
+	ax.text(0.5, -0.7, 'act = ' + str(actual_single[idx]), fontsize=10, ha='center', transform=ax.transAxes)
+    ax.imshow(img)
+```
+
+![image-20251224153030744](../../images/image-20251224153030744.png)
+
+역시 대충 절반정도만 정확히 맞는다.
+
+우린 이제, 케라스를 통해 다중 퍼셉트론을 만들고, 이를 사용해 새 데이터에서 예측을 수행했다.
+이는 비록 지도학습 문제이긴 하지만, 다음 장에서 만들 분야에서 매우 중요한 핵심 개념이 등장한다.
+
+## 2.4 합성곱 신경망
+
+MLP가 한계가 있었던 이유는 입력 이미지의 공간 구조를 다루는 요소가 없었기 때문이다.
+Dense 층에 전달하려고 이미지를 처음에 하나의 벡터로 펼쳐버렸기 때문이다.
+이를 해결하기 위해 CNN을 사용해야 한다.
+
+### 2.4.1 합성곱 층
+
+쉽게 말해 필터를 이미지 위에 올려서 비슷한 패턴이 있는지 검사함.
+
+<img src="../../images/image-20251224154603207.png" alt="image-20251224154603207" style="zoom:50%;" />
+
+필터를 전체 이미지에 상하좌우로 이동하며 합성곱의 출력을 기록함.
+고른 이미지 조각이 필터 모양과 비슷하면 숫자가 크게 나오고, 전혀 다르면 상쇄되어 0근처. 반대면 음수.
+즉 이 위치에 있는 이미지는 내가 찾는 패턴과 얼마나 유사하게 있는지를 봄.
+
+<img src="../../images/image-20251224154938271.png" alt="image-20251224154938271" style="zoom:50%;" />
+
+필터를 좌→우, 상→하로 쭉 움직이면 이미지들이 새로 만들어지고, 주어진 필터에 얼마나 반응했는 지를 알 수 있다.
+필터는 랜덤하게 만들어주고, 어떤건 선, 어떤건 색 조합, 어떤건 모서리 등을 잡으며 확인을 한다.
+
+케라스에선 Conv2D를 통해 높이, 너비를 가진 입력 텐서에 합성곱을 적용한다.
+아래 예제는 위의 그림 2-11을 만든 코드이다.
+
+```python
+layers.Conv2D(
+  filters=2,
+  kernel_size=(3,3),
+  strides=1,
+  padding="same"
+)
+```
+
+### 스트라이드
+
+strides는 필터가 한번에 입력 위를 이동하는 간격을 의미한다. 2이므로 두칸씩 건너뛰며 이동하는 것이다.
+Stride가 커지면 결과 이미지가 작아질것. 즉 해상도를 줄이는 역할도 한다.
+
+### 패딩
+
+쉽게 말해 이미지 테두리에 0을 붙이는 것.
+ padding="same"은 입력 데이터를 0으로 패딩해서 strides = 1일 때 출력의 크기를 입력 크기와 동일하게 만든다.
+
+<img src="../../images/image-20251224160337669.png" alt="image-20251224160337669" style="zoom:50%;" />
+
+이미지를 보면, 테두리에 줄 하나를 추가함으로 인해 필터링 이후에도 크기가 그대로 유지된다.
+여기서 `padding = "same"`으로 지정하면 여러 합성곱 층을 통과할 때 텐서의 크기를 쉽게 파악할 수 있다.
+이때 합성 곱 층의 출력 크기는 $$( \frac{입력 높이}{스트라이드}, \frac{입력 너비}{스트라이드}, 필터개수)$$이다.
+
+쉽게 요약하자면
+
+- stride ↑ → 공간 크기 ↓ 
+- filters ↑ → 채널 수 ↑
+- padding = same → 크기 유지
+
+### 합성곱 층 쌓기
+
+Conv2D 층의 출력도 (batch_size, height, width, filters) 인 4차원 텐서이다.
+그러므로 Conv→Conv→Conv 계속 쌓을 수 있다. 이는 깊은 CNN이다.
+아래는 CIFAR-10 데이터 셋에 Conv2D 층을 적용하고, 레이블을 예측하는 예제이다.
+
+```python
+from tensorflow.keras import layers, models
+
+input_layer = layers.Input(shape=(32,32,3))
+conv_layer_1 = layers.Conv2D(
+    filters = 10,
+    kernel_size = (4,4),
+    strides = 2,
+    padding = 'same')(input_layer)
+conv_layer_2 = layers.Conv2D(
+    filters = 20,
+    kernel_size = (3,3),
+    strides = 2,
+    padding = 'same')(conv_layer_1)
+flatten_layer = layers.Flatten()(conv_layer_2)
+output_layer = layers.Dense(units=10, activation = 'softmax')(flatten_layer)
+model = models.Model(input_layer, output_layer)
+```
+
+<img src="../../images/image-20251224161051256.png" alt="image-20251224161051256" style="zoom:50%;" />
+
+컬러 이미지 이므로 첫번째 합성곱 필터의 깊이는 3이다 (rgb). 입력 이미지의 3개 채널에 맞추기 위해서이다.
+두 번째 필터에도 비슷하게 적용한다.
+
+Conv2D → Conv2D 과정을 통해 특징을 추출하고, Flatten → Dense를 거쳐 최종적으로 분류를 하며 마무리 한다.
+
+### 모델 조사하기
+
+데이터가 합성곱 층을 흘러가며 텐서 크기가 어떻게 바뀌는지 살펴보면 큰 도움이 된다.
+`model.summary()`함수를 통해 네트워크를 지나가며 모양이 어떻게 변하고, 각 층이 얼마나 학습하는지 알 수 있다.
+
+<img src="../../images/image-20251224162155883.png" alt="image-20251224162155883" style="zoom:50%;" />
+
+1. 입력의 크기는 (None, 32, 32, 3)이다. 
+2. 첫 번째 합성곱 층의 10개 필터 각각의 크기는 4x4x3이다. 필터의 높이, 너비를 4로 골랐고 (kernel_size = (4, 4)). 이전 층의 채널이 3개이기 때문이다. 이 층의 파라미터(가중치) 수는 (4 x 4 x 3 + 1) * 10 490개 이다.
+    여기서 +1은 필터마다 편향 항이 포함되기 때문이다.
+    각 필터의 출력은 필터 가중치, 4x4x3 영역의 픽셀끼리 곱한 값이다.
+    strides = 2, padding = "same"이므로 높이와 너비는 반으로 줄어 16이 된다. 10개의 필터를 사용했기에
+    이 층의 출력 크기는 [16, 16, 10]이다.
+3. 두 번째 합성곱 층에서는 필터 크기를 3x3으로 선택했고, 이전 층의 채널수는 10이므로 깊이가 10이다.
+    이 층에서 필터는 20개를 사용하기 때문에 전체 파라미터(가중치)의 수는 (3 x 3 x 10 + 1) x 20 = 1820개이다.
+    여기서도 높이와 너비가 반으로 줄기 때문에 출력은 (None, 8, 8, 20)이다.
+4. 이제 Flatten 층을 통해 텐서를 펼쳐서 1280개의 유닛을 만든다.
+5. 마지막으로 10개의 유닛과 소프트맥스 활성화 함수를 통한 Dense층에 연결.
+    이 층은 (1280 + 1) * 10 = 12810개의 파라미터(가중치)를 학습해야 한다.
+
+이제 성능을 향상시켜 보자.
+
+## 2.4.2 배치 정규화
+
+심층 신경망에서 제일 어려운게 가중치를 일정한 범위 내에서 유지시키는 것이다.
+값이 커지기 시작하면 그레디언트 폭주 문제가 발생했다는 것이다.
+이때 오차가 네트워크를 통해 역전파 되며 앞에 놓인 그레디언트 계산이 기하급수적으로 늘어난다.
+이러면 가중치가 큰 폭으로 출렁이게 된다.
+NaN이 반환되기 시작하면 오버플로우가 됐을 정도로 커졌다는 것이다.
+이걸 막으려면 문제의 근본 원인을 이해해야 한다.
+
+### 공변량 변화 (covariate shift)
+
+신경망에 주입되는 입력 데이터를 스케일 조정하는 이유는 처음 몇 번은 안정적으로 시작하기 위해서다.
+네트워크의 가중치가 랜덤하게 초기화 되었을 때, 스케일이 조정되지 않은 입력은 큰 활성화 출력이 생기고, 폭주로 이어진다.
+그래서 우리는 0~255 사이의 픽셀값을 -1~1 사이로 스케일을 바꾸었다.
+하지만 초반에만 맞다. 네트워크는 학습을 계속한다는 것이 문제다.
+
+이때 네트워크 훈련에 따라 가중치값이 랜덤한 초깃값과 멀어지기 때문에 가정이 무너지고, 이를 공변량 변화라고 한다.
+
+> 높이 쌓인 책을 나르다가 돌풍을 만났다고 하자. 이걸 감쇠시키려고 반대로 책을 틀었다. 하지만 이러면 책이 비스듬하게 놓여지면서 더 불안해지기 시작한다. 이러다가 결국 무너지게 되고 이것이 공변량 변화이다.
+
+### 배치 정규화를 사용한 훈련
+
+배치 정규화는 이 문제를 극적으로 줄이는 해결책이다.
+방법은 정말 단순하게 배치 정규화 층에서 배치 마다의 입력 채널의 평균, 표준편차를 가지고 정규화 한다.
+스케일 파라미터 γ, 이동 파라미터 β를 더 사용하여, 정규화된 입력을 γ만큼 스케일, β만큼 이동시켜 출력한다.
+
+<img src="../../images/image-20251224165618554.png" alt="image-20251224165618554" style="zoom: 33%;" />
+
+- 미니배치 평균 계산: 현재 배치에서 값들의 평균이 얼마인지
+    - 중심 잡기
+- 미니배치 분산 계산: 값들이 다들 얼마나 퍼져있는지
+    - 흔들림 크기 측정
+- 정규화: 평균은 0, 분산은 1에 가깝게 만드는 것. 이때 ε은 분산이 0이 되는걸 막는 안전장치이다.
+    - 이때 $$\hat{x}$$는 완전히 표준화 된 값이다.
+
+> 아까 책 탑 예시에서 책사이를 스프링으로 이어서 크게 위치가 바뀌지 않게 하는 방식이라고 생각하면 된다.
+
+### 배치 정규화를 사용한 예측
+
+예측할 때에는 어떻게 동작하는지 애매하다. 예측을 할 때엔 하나의 샘플, 하나의 예측이므로 평균도 표준편차도 없다.
+그러므로 훈련 과정에서 배치 정규화 층이 채널 별 평균, 표준 편차의 이동 평균을 계산하여 저장한다.
+이때 배치 정규화 층에서 필요한 파라미터가 아까 말한 두가지 γ, β이다. 이전 층의 채널마다 학습되어야 한다.
+
+케라스에서는 BatchNormalization 층이 배치 정규화를 구현해준다.
+
+```python
+from tensorflow.keras import layers
+layers.BatchNormalization(momentum=0.9)
+# momentum = 평균, 표준편차의 이동 평균을 계산하기 전에 주는 가중치.
+```
+
+## 2.4.3 드롭아웃
+
