--- a/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
@@ -525,3 +525,108 @@ layers.BatchNormalization(momentum=0.9)
 
 ## 2.4.3 드롭아웃
 
+시험 공부를 할 때 기출/예상문제의 답만 외우고 이해를 못하면 당연히 시험에서 떨어진다.
+모범적 학생은 내용을 이해하는데 연습 문제를 활용한다. 이런 학생은 없는 문제를 내도 정확히 답을 맞춘다.
+머신러닝도 이런 원리가 필요하다. 특정 데이터셋에서만 작동하고 테스트 셋에서 고장나면 **과대적합**문제가 있다고 한다.
+이를 규제 기법을 사용하여 모델이 과대적합 되면 벌칙을 부여한다. 이것이 드롭아웃층이다.
+
+![image-20251227031849411](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227031849411.png)
+
+간단하게 말하면, 이전층의 유닛 중 일부를 랜덤하게 골라 출력을 0으로 만들어버린다.
+이 방식은 간단해 보이지만서도 과대 적합이 크게 줄어든다. 네트워크가 일부 유닛에 과도하게 의존하지 않는 효과가 있기 때문이다. 
+훈련 세트를 외워버리는 문제를 방지해주고, 학습된 지식이 전체 네트워크에 고르게 퍼질것이다.
+
+랜덤하게 유닛이 꺼지는 돌발 상황에도 정확한 예측을 하도록 훈련시키기 때문에 새로운 데이터에 대한 성능이 크게 향상된다.
+드롭아웃은 따로 훈련되는 가중치가 없고 랜덤하게 결정하며, 예측을 할 때엔 어떤 유닛도 드롭하지 않고 전체 네트워크를 사용해 예측을 만든다.
+
+> 이건 아까 그 학생이 수학 노트에 적힌 주요 공식을 하나씩 가려가며 기출 문제를 푸는 것과 같다.
+> 매번 사전에 있는 공식을 컨닝하여 푸는것이 아니기 때문에 핵심 원리를 이해하여 푸는 법을 배우게 된다.
+> 그래서 시험장에서도 본 적 없는 문제를 잘 풀 수 있게 되는 것이다.
+
+케라스에도 당연히 구현되어있다. rate 매개변수를 통해 드롭아웃을 할 유닛 비율을 지정해준다.
+
+```python
+from tensorflow.keras import layers
+layers.Dropout(rate = 0.25)
+```
+
+드롭아웃 층은 Dense층 이후에 주로 사용된다.
+Dense층이 가중치 개수가 많아서 과대적합되기 가장 쉽기 때문이다. 하지만 합성곱 층 다음에 사용할 수도 있다.
+
+> 배치 정규화도 과대적합을 감소시킨다고 알려져있다. 그래서 최신 딥러닝 구조에서는 드롭아웃을 전혀 안쓰고 규제를 위해 배치 정규화만 사용한다.
+> 이 또한 다른 딥러닝 원리들 처럼 황금률은 따로 없다. 여러 가지 테스트를 통해 어떤 구조가 검증 세트에서 가장 뛰어난 성능이 나오는 가 확인해야 한다. 
+
+## 2.4.4 CNN 만들기
+
+여태까지 배운 케라스 층들을 활용해 CNN 모델을 만들고 CIFAR-10 데이터셋에서 성능을 확인해보자.
+
+```python
+from tensorflow.keras import layers, models
+
+input_layer = layers.Input((32, 32, 3))
+
+x = layers.Conv2D(filters=32, kernel_size=3, strides=1, padding="same")(
+    input_layer
+)
+x = layers.BatchNormalization()(x)
+x = layers.LeakyReLU()(x)
+
+x = layers.Conv2D(filters=32, kernel_size=3, strides=2, padding="same")(x)
+x = layers.BatchNormalization()(x)
+x = layers.LeakyReLU()(x)
+
+x = layers.Conv2D(filters=64, kernel_size=3, strides=1, padding="same")(x)
+x = layers.BatchNormalization()(x)
+x = layers.LeakyReLU()(x)
+
+x = layers.Conv2D(filters=64, kernel_size=3, strides=2, padding="same")(x)
+x = layers.BatchNormalization()(x)
+x = layers.LeakyReLU()(x)
+
+x = layers.Flatten()(x)
+
+x = layers.Dense(128)(x)
+x = layers.BatchNormalization()(x)
+x = layers.LeakyReLU()(x)
+x = layers.Dropout(rate=0.5)(x)
+
+x = layers.Dense(NUM_CLASSES)(x)
+output_layer = layers.Activation("softmax")(x)
+
+model = models.Model(input_layer, output_layer)
+```
+
+Conv2D-BatchNormalization-LeakyReLU의 단계를 거치는 4개의 층을 먼저 쌓았다.
+그리고 만들어진 텐서를 일렬로 쭉 펼치고 128개의 유닛을 가진 Dense층에 통과시키고 다시 한번 BatchNormalization-LeakyReLU층을 거친다.
+그리고 규제를 위한 Dropout을 진행한다. 이후 유닛이 10개인 Dense층이 최종 출력을 만든다.
+
+> 배치 정규화 층, 활성화 층의 순서는 취향에 따라 다르다. 일반적으로는 활성화 층 이전에 배치 정규화 층을 놓지만, 
+> 다른 모델에선 이와 반대로 두고 좋은 결과를 만들기도 한다. 활성화 함수 이전에 배치 정규화 층을 놓으려면
+> BAD(BatchNormalization - Activation - Dropout)을 기억하자.
+
+
+![image-20251227034620320](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034620320.png)![image-20251227034542793](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034542793.png)
+
+만들어진 모델의 구조를 잘 정리한 표이다. 한번 파라미터 개수를 직접 계산해보고 검증해보자. Conv2D와 Dense층에 있는 편향을 잊지말자.
+
+## 2.4.5 CNN 훈련하고 평가하기
+
+이전과 동일한 방식으로 모델을 컴파일하고 훈련한다. `evaluate()`를 통해 진행해보자.
+
+![image-20251227034919645](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034919645.png)
+
+이전에 했던 49%에 비해 무려 72%라는 큰 성장을 이루었다. 아래는 예측한 예시이다.
+
+![image-20251227035147897](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227035147897.png)
+
+간단하게 합성곱, 배치 정규화, 드롭아웃 층을 모델 구조에 직접 추가해 성능을 향상시켜 보았다.
+층의 수는 늘었지만 파라미터 개수는 오히려 줄었다. 
+다양한 모델 구조를 실험하고 어떤 층이 도움이 될 지 이해하는것이 중요하다.
+생성 모델을 만들 때엔 네트워크 중간 층에서 관심 대상인 고수준 특성을 잡아낼 수 있기 때문에 내부 작동 방식을 이해 하는것이 더 중요해진다.
+
+# 2.5 요약
+
+- 딥러닝 모델 구조에는 **정답 하나만 존재하지 않는다**.
+- 레이어의 종류와 순서에는 **가이드라인은 있지만 절대 규칙은 없다**.
+- 모델 설계는 **블록을 조립하듯 실험과 시도를 통해 발전**한다.
+- 다음 장에서는 이 구성요소들을 활용해 **이미지를 생성하는 모델**로 확장한다.
