--- a/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-딥러닝.md
@@ -155,7 +155,7 @@ model.summary()
 
 위 두 가지 코드는 같은 모델을 만듦. 아래는 구조를 그림으로 나타낸 모습.
 
-<img src="./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251223202906350.png" alt="image-20251223202906350" />
+<img src="../../images/image-20251223202906350.png" alt="image-20251223202906350" />
 
 ### 레이어
 
@@ -172,7 +172,7 @@ model.summary()
 이 뉴런의 계산 결과를 그냥 넘길지, 조정해서 넘길지 조정하는 규칙이다.
 신경망에 곡선을 넣어서 복잡한 패턴을 배울 수 있게 만들어준다.
 
-![image-20251223204629393](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251223204629393.png)
+![image-20251223204629393](../../images/image-20251223204629393.png)
 
 - ReLU: 제일 기본, 가장 많이 쓰는 함수
     - 입력이 0보다 작으면 0 더 크면 그대로 통과
@@ -530,7 +530,7 @@ layers.BatchNormalization(momentum=0.9)
 머신러닝도 이런 원리가 필요하다. 특정 데이터셋에서만 작동하고 테스트 셋에서 고장나면 **과대적합**문제가 있다고 한다.
 이를 규제 기법을 사용하여 모델이 과대적합 되면 벌칙을 부여한다. 이것이 드롭아웃층이다.
 
-![image-20251227031849411](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227031849411.png)
+![image-20251227031849411](../../images/image-20251227031849411.png)
 
 간단하게 말하면, 이전층의 유닛 중 일부를 랜덤하게 골라 출력을 0으로 만들어버린다.
 이 방식은 간단해 보이지만서도 과대 적합이 크게 줄어든다. 네트워크가 일부 유닛에 과도하게 의존하지 않는 효과가 있기 때문이다. 
@@ -605,7 +605,7 @@ Conv2D-BatchNormalization-LeakyReLU의 단계를 거치는 4개의 층을 먼저
 > BAD(BatchNormalization - Activation - Dropout)을 기억하자.
 
 
-![image-20251227034620320](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034620320.png)![image-20251227034542793](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034542793.png)
+![image-20251227034620320](../../images/image-20251227034620320.png)![image-20251227034542793](../../images/image-20251227034542793.png)
 
 만들어진 모델의 구조를 잘 정리한 표이다. 한번 파라미터 개수를 직접 계산해보고 검증해보자. Conv2D와 Dense층에 있는 편향을 잊지말자.
 
@@ -613,11 +613,11 @@ Conv2D-BatchNormalization-LeakyReLU의 단계를 거치는 4개의 층을 먼저
 
 이전과 동일한 방식으로 모델을 컴파일하고 훈련한다. `evaluate()`를 통해 진행해보자.
 
-![image-20251227034919645](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227034919645.png)
+![image-20251227034919645](../../images/image-20251227034919645.png)
 
 이전에 했던 49%에 비해 무려 72%라는 큰 성장을 이루었다. 아래는 예측한 예시이다.
 
-![image-20251227035147897](./../images/2025-12-21-%EB%94%A5%EB%9F%AC%EB%8B%9D/image-20251227035147897.png)
+![image-20251227035147897](../../images/image-20251227035147897.png)
 
 간단하게 합성곱, 배치 정규화, 드롭아웃 층을 모델 구조에 직접 추가해 성능을 향상시켜 보았다.
 층의 수는 늘었지만 파라미터 개수는 오히려 줄었다. 
