--- a/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
+++ b/_posts/Generative Deep Learning/2025-12-18-생성 모델링.md
@@ -1,6 +1,5 @@
 # Chapter 1. 생성 모델링
-
-## 1.1 생성 모델링이란?
+# 1.1 생성 모델링이란?
 
 주어진 데이터셋과 유사한 새로운 데이터를 생성할 수 있게 모델을 훈련하는 것
 
@@ -16,7 +15,7 @@
 결정적이지 않음, 확률적이어야 함 → 다양한 출력 결과를 샘플링할 수 있어야 하기 떄문.
 생성 모델은 생성되는 개별 샘플에 영향을 미칠수 있는 랜덤 요소가 포함되어야 함.
 
-### 1.1.1 생성 모델링과 판별 모델링
+## 1.1.1 생성 모델링과 판별 모델링
 
 판별 모델링: 생성 모델링의 반대개념
 
@@ -32,13 +31,13 @@
 - 완벽히 판별하는 모델을 만들 지언정 만드는 방법은 알지 못한다. 그저 확률만 출력할 뿐
     - 생성 모델을 훈련하고 이 모델에서 샘플링하여 원본 훈련 데이터셋에 속할 가능성이 높은 이미지를 생성해야 한다.
 
-### 1.1.2 생성 모델의 등장
+## 1.1.2 생성 모델의 등장
 
 <img src="../../images/image-20251219102305356.png" alt="image-20251219102305356" style="zoom:50%;" />
 
 생성 모델을 만드는 건 어렵고, 근접할 수 없는 영역이었지만 머신러닝 기술의 발전이 이를 가능하게 만들었다.
 
-### 1.1.3 생성 모델링과 AI
+## 1.1.3 생성 모델링과 AI
 
 - 생성 모델을 복잡한 인공지능 문제를 푸는 열쇠로 생각되는 세 가지 이유
     1. 이론적 이유: 단순히 레이블 수준을 넘어서 데이터의 분포를 완전히 이해해야 하기 때문에.
@@ -46,9 +45,9 @@
     3. 근본적 이유: 인간의 지능은 생성적이기 때문이다. 보이지 않는 것을 상상하고 미래를 떠올리는 것은 생성적이다.
         - 뇌의 작동원리와 인공 일반지능을 이해하는데 핵심적인 도구가 될 것이다.
 
-## 1.2 첫 번째 생성 모델
+# 1.2 첫 번째 생성 모델
 
-### 1.2.1 간단한 생성 모델
+## 1.2.1 간단한 생성 모델
 
 2차원 생성 모델링 게임 예시)
 포인트 집합 `X` → 규칙 `P_data` 같은 규칙으로 보이는 다른 포인트 `x=(x1, x2)`를 고르는 것이 목표.
@@ -62,13 +61,13 @@
 새로운 샘플을 생성 할 때 이 네모 상자 안에서 랜덤한 점을 고르면 된다. 조금 더 이론적으로 말하면, `P_model`분포로 부터 샘플링 한다고 한다.
 우리는 이를 통해 훈련 데이터(점들)를 통해 다른 포인트(훈련 데이터에 없는)를 생성할 수 있는 모델(주황색 구역)을 만든 것이다.
 
-### 1.2.2 생성 모델링 프레임워크
+## 1.2.2 생성 모델링 프레임워크
 
 위의 내용을 통해 생성 모델링 프레임 워크를 작성해보자.
 
 ---
 
-#### 샘플 모델링 프레임워크
+### 샘플 모델링 프레임워크
 
 - 샘플 데이터셋 `X`를 가지고 있다.
 - 샘플이 알려지지 않은 어떤 `P_data`분포로 생성 된 것으로 가정.
@@ -93,7 +92,7 @@
 실제 분포상으론 여러 대륙과 바다로 구분되지만, 모델에선 하나의 큰 대륙만이 있다.
 이는 생성 모델링의 기본 개념을 보여준다. 훨씬 고차원적인 다른 문제도 기본 프레임 워크는 같다.
 
-### 1.2.3 표현 학습
+## 1.2.3 표현 학습
 
 사람을 찾을 때 사진의 픽셀들의 색깔로 찾는 것이 아니라, 금발에 안경을 썼다 등 픽셀의 그룹의 특성으로 찾는다. 이런 설명이 10개 정도 있으면 픽셀로 매핑해 머리 속에 이미지를 만들 수 있다.
 이렇게 수많은 픽셀을 몇 개의 의미 있는 특징으로 요약하는 것을 자동으로 배우는 게 표현 학습이다.
@@ -124,7 +123,7 @@
 훈련 데이터셋 → 인코딩 → 샘플링 → 디코딩하는 과정은 많은 생성 모델링 기법에서 사용된다.
 쉽게 말해 복잡한 고차원 공간을 단순한 공간으로 바꾼다는 이야기이다.
 
-## 1.3 핵심 확률 이론
+# 1.3 핵심 확률 이론
 
 생성 모델링은 확률 분포의 통계적 모델링과 밀접하다.
 다섯 가지 핵심 용어 정리
@@ -149,7 +148,7 @@
     - 모델에 담긴 신경망의 가중치. 주어진 데이터를 관측할 가능도를 최대화(음의 로그 가능도는 최소화)하는 파라미터 θ를 찾는다.
 - 일반적으로 고차원 문제에서 `p_θ(x)`를 직접 계산하기는 매우 어렵다.
 
-## 1.4 생성 모델 분류
+# 1.4 생성 모델 분류
 
 모든 생성모델은 밀도 함수 `p_θ(x)`를 모델링 하는 방식이 조금씩 다르다. 크게 세 가지가 있다.
 
@@ -172,11 +171,11 @@
 
 모두 **딥러닝**이다. 거의 모든 정교한 생성 모델의 핵심은 심층 신경망이다.
 
-## 1.5 생성 딥러닝 예제 코드 
+# 1.5 생성 딥러닝 예제 코드 
 
 https://github.com/davidADSP/Generative_Deep_Learning_2nd_Edition
 
-## 1.6 요약
+# 1.6 요약
 
 - 생성 모델링은 판별 모델링을 대체하는 수준이 아닌 중요한 머신러닝의 분야이다.
 - 생성 모델의 핵심 목표는 개별 데이터를 맞히는 것이 아닌 데이터가 생성되는 전체 분포 모델링.
