--- a/_posts/Generative Deep Learning/2025-12-21-Chapter 2. 딥러닝.md
+++ b/_posts/Generative Deep Learning/2025-12-21-Chapter 2. 딥러닝.md
@@ -145,8 +145,6 @@ x = layers.Dense(150, activation="relu")(x)
 output_layer = layers.Dense(NUM_CLASSES, activation="softmax")(x)
 
 model = models.Model(input_layer, output_layer)
-
-model.summary()
 ```
 
 함수형 API를 사용하여 만든 모델.
@@ -611,11 +609,11 @@ Conv2D-BatchNormalization-LeakyReLU의 단계를 거치는 4개의 층을 먼저
 
 이전과 동일한 방식으로 모델을 컴파일하고 훈련한다. `evaluate()`를 통해 진행해보자.
 
-![image-20251227034919645](../../images/image-20251227034919645.png)
+<img src="../../images/image-20251229165418533.png" alt="image-20251229165418533" style="zoom:50%;" />
 
 이전에 했던 49%에 비해 무려 72%라는 큰 성장을 이루었다. 아래는 예측한 예시이다.
 
-![image-20251227035147897](../../images/image-20251227035147897.png)
+<img src="../../images/image-20251229165413713.png" alt="image-20251229165413713" style="zoom:50%;" />
 
 간단하게 합성곱, 배치 정규화, 드롭아웃 층을 모델 구조에 직접 추가해 성능을 향상시켜 보았다.
 층의 수는 늘었지만 파라미터 개수는 오히려 줄었다. 
